2009-05-27  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__magick_read__.cc (write_image):
	Bail out if given indexed image.

2009-05-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_map): Fix RGB color
	construction.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* load-path.h, load-path.cc (load_path::files, load_path::do_files): 
	New arg, OMIT_EXTS.
	* help.cc (F__list_functions__): Call load_path::files with
	omit_exts set to true.

	* symtab.h
	(symbol_table::symbol_record::symbol_record_rep::is_variable):
	Use "! is_local ()" instead of storage_class != local.
	(symbol_table::do_variable_names): Only add variables to the list.
	(symbol_table::unmark_forced_variables): New static function
	* variables.cc (do_who): Use is_variable instead of is_defined.
	Also limit output to variables when using regexp pattern.
	* octave.cc (unmark_forced_vars): Delete.
	(execute_eval_option_code): Don't add unmark_forced_vars to 
	unwind_protect stack here.
	* toplev.cc (main_loop): Add symbol_table::unmark_forced_variables
	to the unwind_protect stack here.
	* input.cc (get_debug_input): Likewise.
	* parse.y (parse_fcn_file, eval_string): Likewise.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* toplev.h (quit_allowed): New global variable.
	* toplev.cc (quit_allowed): Declare it.
	(Fquit): Raise error if quitting is not allowed.
	* octave.cc (octave_main): if running as embedded, disable quit by
	default.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* variables.cc (do_who): Only output symbols with a defined value.

2009-05-22  Michael Goffioul  <michael.goffioul@gmail.com>

	* toplev.h (main_loop): Tag with OCTINTERP_API.
	* input.h (octave_read, get_input_from_file, get_input_from_stdin):
	Ditto.
	* lex.h (create_buffer, current_buffer, switch_to_buffer,
	delete_buffer, restore_input_buffer, delete_input_buffer): Ditto.

2009-05-22  Robert T. Short  <octave@phaselockedsystems.com>
